--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/jetty/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/jetty/BUILD
@@ -3,22 +3,18 @@ java_library(
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//third_party:com_codahale_metrics_metrics_healthchecks",
-        "//third_party:com_google_inject_guice",
+        "//third_party:com_fasterxml_jackson_core_jackson_annotations",
+        "//third_party:com_google_guava_guava",
         "//third_party:io_dropwizard_dropwizard_configuration",
         "//third_party:io_dropwizard_dropwizard_core",
         "//third_party:io_dropwizard_dropwizard_jetty",
         "//third_party:io_prometheus_simpleclient",
         "//third_party:io_prometheus_simpleclient_jetty",
         "//third_party:javax_validation_validation_api",
+        "//third_party:jetty_server9",
+        "//third_party:net_sourceforge_argparse4j_argparse4j",
         "//third_party:org_slf4j_slf4j_api",
         "//third_party/dropwizard",
         "@aggregation//:com_codahale_metrics_metrics_core",
-        "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
-        "@aggregation//:com_google_guava_guava",
-        "@aggregation//:net_sourceforge_argparse4j_argparse4j",
-        "@aggregation//:org_eclipse_jetty_jetty_server",
-        "@aggregation//:org_eclipse_jetty_jetty_util",
-        "@tink_backend//src/libraries/metrics/core/src/main/java/se/tink/libraries/metrics/prometheus",
     ],
 )
