feat(aggregation): introduce jetty metrics to aggregation
this is done by replacing the default dropwizard "server" command, to
the "tink_server" command that is a copy of the default one, but also
adds metrics to the jetty server.

--- a/.charts/tink-backend-aggregation/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation/templates/deployment.yaml
@@ -335,7 +335,11 @@ spec:
         - "-XX:+UseG1GC"
         - "-XX:+PrintFlagsFinal"
         - "/usr/share/tink-backend-aggregation/aggregation_service.jar"
+        {{- if .Values.runTinkServer }}
+        - "tink_server"
+        {{- else }}
         - "server"
+        {{- end }}
         - "/etc/tink/config.yml"
 
         env:
