--- a/.charts/tink-backend-aggregation/values/aggregation-staging.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-staging.yaml
@@ -84,3 +84,4 @@ sendAgentLoginCompletedEvents: true
 sendAgentRefreshEvents: true
 sendAccountInformationServiceEvents: true
 startupProbeEnabled: true
+runTinkServer: true
