--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/configuration/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/configuration/BUILD
@@ -20,6 +20,7 @@ java_library(
         "//third_party:com_google_guava_guava",
         "//third_party:com_google_inject_guice",
         "//third_party:io_dropwizard_dropwizard_core",
+        "//third_party:io_prometheus_simpleclient",
         "//third_party:javax_inject_javax_inject",
         "//third_party:lombok_libs",
         "//third_party:net_spy_spymemcached",
