--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/banks/danskebank/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/banks/danskebank/BUILD
@@ -49,5 +49,6 @@ java_library(
         "@aggregation//:org_apache_commons_commons_text",
         "@selenium//:org_seleniumhq_selenium_selenium_api",
         "@tink_backend//src/libraries/account_identifier",
+        "@tink_backend//src/libraries/strings",
     ],
 )
