--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup/BUILD
@@ -16,6 +16,7 @@ java_library(
         "//third_party:org_apache_commons_commons_collections4",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
+        "@aggregation//:com_fasterxml_jackson_core_jackson_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
         "@aggregation//:com_google_guava_guava",
     ],
