--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/de/openbanking/dkb/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/de/openbanking/dkb/BUILD
@@ -28,6 +28,7 @@ java_library(
         "//src/integration/payment:rpc",
         "//src/libraries/agent-storage",
         "//src/libraries/date",
+        "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_core",
         "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang3",
