--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/commands/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/commands/BUILD
@@ -64,6 +64,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/logmasker",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/configuration",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/configuration/iface",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/exceptions/client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/instrumentation",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/source_info",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/utils/masker",
