--- a/.charts/tink-backend-aggregation-agents/templates/se/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/se/alerts.yaml
@@ -257,7 +257,7 @@ spec:
   - alert: AuthErrorSE
     expr: |
       # Auth error above 90%
-      (sum(increase(tink_agent_login_total{action=~"login|is-logged-in", outcome=~"cancelled|failed|unavailable", market="SE", provider_type!="test"}[30m])) by (action,className,provider)
+      (sum(increase(tink_agent_login_total{action=~"login|is-logged-in", outcome=~"cancelled|cancelled_due_to_third_party_app_timeout|failed|failed_due_to_tink_infrastructure_failure|unavailable", market="SE", provider_type!="test"}[30m])) by (action,className,provider)
                 / sum(increase(tink_agent_login_total{action=~"login|is-logged-in", market="SE", provider_type!="test"}[30m])) by (action,className,provider) >0.90)
        and sum(increase(tink_agent_login_total{market="SE", provider_type!="test"}[30m])) by (action,className,provider) > 10
     for: 5m
