feat(jaeger): enable tracing in staging

--- a/.charts/tink-backend-aggregation/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation/templates/deployment.yaml
@@ -1,4 +1,5 @@
 {{- $clusterName := printf "%s-%s" .Values.Cluster .Values.Environment }}
+{{ $jaeger := .Values.jaeger | default dict }}
 {{- $agentsConfig := .Values.agents | default dict }}
 {{- $startupProbeEnabled := .Values.startupProbeEnabled | default false }}
 apiVersion: apps/v1
@@ -429,6 +430,27 @@ spec:
         - name: callback-jwt-signature-pair
           mountPath: /etc/tink-callback-jwt-signature-pair
         {{- end }}
+      {{- if $jaeger.tracingEnabled | default false }}
+      - name: jaeger-agent
+        image: gcr.io/tink-containers/jaeger-agent:1.14.0
+        imagePullPolicy: Always
+        securityContext:
+          readOnlyRootFilesystem: true
+        ports:
+          - name: zipkin-thrift
+            containerPort: 5775
+            protocol: UDP
+          - name: jaeger-thrift
+            containerPort: 6831
+            protocol: UDP
+          - name: jaeger-binary
+            containerPort: 6832
+            protocol: UDP
+          - name: serve-configs
+            containerPort: 5778
+            protocol: TCP
+        args: ["--reporter.tchannel.host-port=jaeger-collector.jaeger-tracing.svc.cluster.local:14267", "--reporter.tchannel.discovery.conn-check-timeout=500ms"]
+      {{ end }}
 
       volumes:
       - name: config-scripts
