--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/it/openbanking/finecobank/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/it/openbanking/finecobank/BUILD
@@ -26,6 +26,7 @@ java_library(
         "//src/libraries/agent-storage",
         "//src/libraries/date",
         "//src/libraries/i18n",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/api",
         "//third_party:com_google_http_client_google_http_client",
         "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_core",
