--- a/.charts/tink-backend-aggregation-agents/templates/payments/fr/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/payments/fr/alerts.yaml
@@ -6,13 +6,13 @@ metadata:
 spec:
   rules:
 
-    - alert: TransferSuccessRateLowForFrance
+    - alert: TransferSuccessRateLowForFranceOtherThanBpceGroup
       expr: |
         # Successful/Cancelled transfer outcomes below 60%
-        (sum by(className) (increase(tink_agent_transfer_total{ market="FR", provider_type!="test", outcome=~"completed|cancelled"}[30m]))
-          / sum by(className) (increase(tink_agent_transfer_total{provider_type!="test"}[30m]))) < 0.6
+        (sum by(className) (increase(tink_agent_transfer_total{market="FR", className!~".*BpceGroupAgent.*", provider_type!="test", outcome=~"completed|cancelled"}[30m]))
+          / sum by(className) (increase(tink_agent_transfer_total{market="FR", className!~".*BpceGroupAgent.*", provider_type!="test"}[30m]))) < 0.6
         # # At least this many attempts
-        and sum by(className) (increase(tink_agent_transfer_total{provider_type!="test"}[30m])) > 3
+        and sum by(className) (increase(tink_agent_transfer_total{market="FR", className!~".*BpceGroupAgent.*", provider_type!="test"}[30m])) > 3
       for: 5m
       labels:
         severity: urgent
@@ -23,3 +23,22 @@ spec:
           {{ .Values.grafanaLink }}
         summary: Transfer completion rate is below 60% actual % is <{ $value }> for <{ $labels.className }> the last 30m. More than 3 attempts.
         tags: <{ $labels.className }> , *#payments*
+
+    - alert: TransferSuccessRateLowForBpceGroupFrance
+      expr: |
+        # Successful/Cancelled transfer outcomes for BpceGroup below 50%
+        (sum by(className) (increase(tink_agent_transfer_total{market="FR", className=~".*BpceGroupAgent.*", provider_type!="test", outcome=~"completed|cancelled"}[30m]))
+          / sum by(className) (increase(tink_agent_transfer_total{market="FR", className=~".*BpceGroupAgent.*", provider_type!="test"}[30m]))) < 0.5
+        # # At least this many attempts
+        and sum by(className) (increase(tink_agent_transfer_total{market="FR", className=~".*BpceGroupAgent.*", provider_type!="test"}[30m])) > 3
+      for: 5m
+      labels:
+        severity: urgent
+        priority: P3
+        who: payments-connectivity
+      annotations:
+        description: {{ .Values.kibanaLink }}
+          {{ .Values.grafanaLink }}
+        summary: Transfer completion rate is below 50% actual % is <{ $value }> for <{ $labels.className }> the last 30m. More than 3 attempts.
+        tags: <{ $labels.className }> , *#payments*
+        
