--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/BUILD
@@ -30,6 +30,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/core/authentication",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/handler",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http_api_client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/instrumentation",
