--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/client/BUILD
@@ -9,6 +9,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/exceptions/client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filterable",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filterable/request",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/executiontime",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/handler",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/redirect/handler",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/request",
