feat(deps): updated deps
This is to prepare for Java11 update. In summary, we will need some additional deps for XML and these libraries would have conflicts with some old versions of some libraries that we are currently using. For these reason, these libraries are updated and the additional deps that we will need are included.

--- a/src/integration/agents/BUILD
+++ b/src/integration/agents/BUILD
@@ -118,9 +118,15 @@ java_library(
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
         "@aggregation//:com_fasterxml_jackson_dataformat_jackson_dataformat_xml",
         "@aggregation//:com_google_code_gson_gson",
+        "@aggregation//:com_sun_xml_ws_jaxws_ri",
+        "@aggregation//:com_sun_xml_ws_jaxws_rt",
         "@aggregation//:io_netty_netty_codec",
         "@aggregation//:io_netty_netty_codec_http",
+        "@aggregation//:jakarta_xml_bind_jakarta_xml_bind_api",
+        "@aggregation//:jakarta_xml_soap_jakarta_xml_soap_api",
+        "@aggregation//:jakarta_xml_ws_jakarta_xml_ws_api",
         "@aggregation//:joda_time_joda_time",
+        "@aggregation//:org_glassfish_jaxb_jaxb_runtime",
         "@tink_backend//src/aggregation-controller/api/src/main/java/se/tink/backend/aggregationcontroller/v1/rpc/enums",
         "@tink_backend//src/libraries/account_identifier",
     ],
