refactor(java11): updated SOAP utils

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/soap/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/soap/BUILD
@@ -4,5 +4,12 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//third_party:com_google_guava_guava",
+        "@aggregation//:com_sun_xml_messaging_saaj_saaj_impl",
+        "@aggregation//:com_sun_xml_ws_jaxws_rt",
+        "@aggregation//:jakarta_xml_bind_jakarta_xml_bind_api",
+        "@aggregation//:jakarta_xml_soap_jakarta_xml_soap_api",
+        "@aggregation//:jakarta_xml_ws_jakarta_xml_ws_api",
+        "@aggregation//:javax_xml_soap_saaj_api",
+        "@aggregation//:org_glassfish_jaxb_jaxb_runtime",
     ],
 )
