refactor(java11): updated UKOB AIS

--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/ukopenbanking/ais/base/module/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/ukopenbanking/ais/base/module/BUILD
@@ -14,6 +14,7 @@ java_library(
         "//third_party:lombok_libs",
         "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_slf4j_slf4j_api",
+        "@aggregation//:javax_inject_javax_inject",
         "@aggregation//:no_finn_unleash_unleash_client_java",
         "@tink_backend//src/libraries/unleash",
     ],
