feat(aggregation): Add oldest trx date to summary
[KIB-36]

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/summary/refresh/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/summary/refresh/BUILD
@@ -1,10 +1,11 @@
 java_library(
     name = "refresh",
-    srcs = glob(["*.java"]),
+    srcs = glob(["**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
+        "//src/integration/models",
         "//src/integration/user:rpc",
         "//third_party:com_google_code_gson_gson",
         "//third_party:lombok_libs",
