feat(fake-ac): set endpoints for wiremock state

--- a/src/aggregation/fake_aggregation_controller/src/main/java/se/tink/backend/fake_aggregation_controller/BUILD
+++ b/src/aggregation/fake_aggregation_controller/src/main/java/se/tink/backend/fake_aggregation_controller/BUILD
@@ -3,14 +3,18 @@ load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
 java_library(
     name = "fake_aggregation_controller",
-    srcs = glob(["*.java"]),
+    srcs = glob(["**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
+        "//src/aggregation/fake_aggregation_controller/src/main/java/se/tink/backend/fake_aggregation_controller/dto",
+        "//src/aggregation/fake_aggregation_controller/src/main/java/se/tink/backend/fake_aggregation_controller/state_controller",
         "//third_party:com_codahale_metrics_metrics_healthchecks",
         "//third_party:com_sun_jersey_jersey_core",
         "//third_party:io_dropwizard_dropwizard_core",
         "//third_party:io_dropwizard_dropwizard_jersey",
+        "//third_party:lombok_plugin",
         "//third_party:org_slf4j_slf4j_api",
+        "@aggregation//:org_projectlombok_lombok",
     ],
 )
 
