feat(auth-abort): implemented OperationStatusManager

--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/operation/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/operation/BUILD
@@ -35,11 +35,13 @@ java_library(
         "//src/integration/transfer:rpc",
         "//src/integration/user:rpc",
         "//src/libraries/account_data_cache",
+        "//src/libraries/cache",
         "//src/libraries/connectivity_errors",
         "//src/libraries/giro_validation",
         "//src/libraries/i18n",
         "//third_party:com_google_code_findbugs_jsr305",
         "//third_party:com_google_guava_guava",
+        "//third_party:com_google_inject_guice",
         "//third_party:com_sun_jersey_jersey_client",
         "//third_party:io_dropwizard_dropwizard_lifecycle",
         "//third_party:javax_inject_javax_inject",
