--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
@@ -17,7 +17,9 @@ junit_test(
         "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/api",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/controllers",
+        "//src/libraries/cache",
         "//third_party:org_apache_curator_curator_framework",
+        "//third_party:org_apache_curator_curator_recipes",
         "//third_party:org_apache_zookeeper_zookeeper",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
